fixed hero swiperjs height on mobile devices again

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-height: 50vh;
 }
 
+.max-h-\[20vh\]{
+  max-height: 20vh;
+}
+
+.\!max-h-\[20vh\]{
+  max-height: 20vh !important;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
